@@ -1,6 +1,7 @@
 96dcb1cde9bc98c736fb33146982215f4509ae8539475e513e9cef326c78cbda  test/results/test00-knight-posix-binary
 c52562bd0aabb86ce8ca177f22f8d0455769b444df2d4d62894faab63b7151d8  test/results/test00-x86-binary
-eae96857f2b6d8e8ba86ac06e72345ea572622b358b23978bb5f2db1baadf41c  test/results/test01-binary
+fab674644b9519e8ec39e254e6b13fe5eccb9f861f7d9e7d2f736d40875b7546  test/results/test01-knight-posix-binary
+eae96857f2b6d8e8ba86ac06e72345ea572622b358b23978bb5f2db1baadf41c  test/results/test01-x86-binary
 8ead336d2f3f72d5874230492e0472edec61d355905e8636e3dfb2731695037c  test/results/test02-binary
 2313cb3f1a2b9eb6bf15f8d43418e15d6c16f7f1b5c22700fdfc2b38beb59192  test/results/test03-binary
 b7ddb37063c541c6a315809c4438aa235d6702f54bb64f4ffc88dbe78617de81  test/results/test04-binary
