@@ -22,7 +22,7 @@ then
 ./bin/M2-Planet --architecture x86 -f functions/file.c \
 	-f functions/malloc.c \
 	-f functions/calloc.c \
-	-f functions/exit.c \
+	-f test/common_x86/functions/exit.c \
 	-f functions/match.c \
 	-f functions/in_set.c \
 	-f functions/numerate_number.c \
@@ -42,7 +42,7 @@ then
 ./bin/M2-Planet-seed --architecture x86 -f functions/file.c \
 	-f functions/malloc.c \
 	-f functions/calloc.c \
-	-f functions/exit.c \
+	-f test/common_x86/functions/exit.c \
 	-f functions/match.c \
 	-f functions/in_set.c \
 	-f functions/numerate_number.c \
@@ -78,7 +78,7 @@ ${CC} ${CFLAGS} \
 ./bin/M2-Planet-gcc --architecture x86 -f functions/file.c \
 	-f functions/malloc.c \
 	-f functions/calloc.c \
-	-f functions/exit.c \
+	-f test/common_x86/functions/exit.c \
 	-f functions/match.c \
 	-f functions/in_set.c \
 	-f functions/numerate_number.c \
@@ -122,7 +122,7 @@ then
 	./test/results/test100-binary --architecture x86 -f functions/file.c \
 		-f functions/malloc.c \
 		-f functions/calloc.c \
-		-f functions/exit.c \
+		-f test/common_x86/functions/exit.c \
 		-f functions/match.c \
 		-f functions/in_set.c \
 		-f functions/numerate_number.c \
