@@ -20,7 +20,7 @@ set -ex
 bin/M2-Planet --architecture x86 -f functions/file.c \
 	-f functions/malloc.c \
 	-f functions/calloc.c \
-	-f functions/exit.c \
+	-f test/common_x86/functions/exit.c \
 	-f functions/match.c \
 	-f functions/in_set.c \
 	-f functions/numerate_number.c \
