@@ -27,6 +27,7 @@ Added support for \0
 Added support for GET_MACHINE_FLAGS in tests
 Added --architecture flag
 Added first knight-posix test
+Added second knight-posix test
 
 ** Changed
 Converted M2-Planet to use GNU style error message
@@ -37,6 +38,7 @@ Updated hex2 to current version
 Updated get_machine to current version
 Updated to mescc-tools 0.6.0 syntax
 Changed default architecture to knight-native
+Moved x86 specific exit.c and putchar.c to test/common_x86/functions
 
 ** Fixed
 Fixed typo in file headers
